[package]
name = "omni-ping"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0"
axum = "0.8.8"
minijinja = { version = "2.18.0", features = ["loader", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
bytes = "1.11.1"
